--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Project</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
     <script src="project3.js"></script>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div id="app"></div>
 
     <div id="quizPage" class="container"></div>
@@ -22,71 +23,135 @@
     <div id="resultPage" class="container"></div>
 
     <script id="start-template" type="text/x-handlebars-template">
-        <div id="startingPage" class="container">
-          <h1>Welcome!</h1>
-          <h4>Ready to start the Quiz?</h4>
-          <form id="startForm">
-            <div class="form-group">
-              <label for="nameInput">Enter your name:</label>
-              <input type="text" id="nameInput" class="form-control" value="{{name}}" required />
-            </div>
-            <div class="form-group">
-              <label for="quizSelect">Select a quiz:</label>
-              <select id="quizSelect" class="form-control" required>
-                <option value="" disabled selected>Select Quiz</option>
-                <option value="Quiz 1">Javascript Quiz</option>
-                <option value="Quiz 2">Java Quiz</option>
-              </select>
-            </div>
-            <button type="submit" class="btn btn-primary" id="start-quiz-button">Start Quiz</button>
-          </form>
-        </div>
-      </script>
+      <div id="startingPage" class="container" style="margin-top: 50px;">
+        <h1>Welcome!</h1>
+        <h4>Ready to start the Quiz?</h4>
+        <form id="startForm">
+          <div class="form-group">
+            <label for="nameInput">Enter your name:</label>
+            <input
+              type="text"
+              id="nameInput"
+              class="form-control"
+              value="{{name}}"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="quizSelect">Select a quiz:</label>
+            <select id="quizSelect" class="form-control" required>
+              <option value="" disabled selected>Select Quiz</option>
+              <option value="Quiz 1">Javascript Quiz</option>
+              <option value="Quiz 2">Java Quiz</option>
+            </select>
+          </div>
+          <button
+            type="submit"
+            class="btn btn-primary"
+            id="start-quiz-button"
+          >Start Quiz</button>
+        </form>
+      </div>
+    </script>
 
-      <script id="quiz-template" type="text/x-handlebars-template">
-    <form id="quizForm" class="p-3">
-        <h2 class="mb-3">{{currentQuestion.question}}</h2>
-        {{#ifEquals currentQuestion.type 'multipleChoice'}}
-            <div class="form-check">
-                {{#each currentQuestion.options}}
-                    <input class="form-check-input" type="radio" name="answer" value="{{this}}" id="{{this}}">
-                    <label class="form-check-label" for="{{this}}">{{this}}</label><br>
-                {{/each}}
-            </div>
-        {{else}}
-            {{#ifEquals currentQuestion.type 'text'}}
-                <input type="text" name="answer" class="form-control">
-            {{else}}
-                {{#ifEquals currentQuestion.type 'image'}}
+    <script id="quiz-template" type="text/x-handlebars-template">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-8">
+            <div class="card mt-5">
+              <div class="card-body">
+                <form id="quizForm">
+                  <h2 class="mb-3">{{currentQuestion.question}}</h2>
+                  {{#ifEquals currentQuestion.type "multipleChoice"}}
                     <div class="form-check">
-                        {{#each currentQuestion.options}}
-                            <input class="form-check-input" type="radio" name="answer" value="{{this}}" id="{{this}}">
-                            <label class="form-check-label" for="{{this}}">
-                                <img src="{{this}}" alt="Option image" class="img-thumbnail">
-                             </label><br>
-                        {{/each}}
+                      {{#each currentQuestion.options}}
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          name="answer"
+                          value="{{this}}"
+                          id="{{this}}"
+                        />
+                        <label
+                          class="form-check-label"
+                          for="{{this}}"
+                        >{{this}}</label><br />
+                      {{/each}}
                     </div>
-                {{/ifEquals}}
-            {{/ifEquals}}
-        {{/ifEquals}}
-        <button type="submit" class="btn btn-primary mt-3">Submit</button>
-    </form>
-</script>
+                  {{else}}
+                    {{#ifEquals currentQuestion.type "text"}}
+                      <input type="text" name="answer" class="form-control" />
+                    {{else}}
+                      {{#ifEquals currentQuestion.type "image"}}
+                        <div class="form-check">
+                          {{#each currentQuestion.options}}
+                            <input
+                              class="form-check-input"
+                              type="radio"
+                              name="answer"
+                              value="{{this}}"
+                              id="{{this}}"
+                            />
+                            <label class="form-check-label" for="{{this}}">
+                              <img
+                                src="{{this}}"
+                                alt="Option image"
+                                class="img-thumbnail"
+                              />
+                            </label><br />
+                          {{/each}}
+                        </div>
+                      {{/ifEquals}}
+                    {{/ifEquals}}
+                  {{/ifEquals}}
+                  <button
+                    type="submit"
+                    class="btn btn-primary mt-3"
+                  >Submit</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </script>
 
-<script id="feedback-template" type="text/x-handlebars-template">
-    <h2>{{feedbackTitle}}</h2>
-    <p>{{feedbackMessage}}</p>
-    <button id="nextQuestion">Next Question</button>
-  </script>
+    <script id="feedback-template" type="text/x-handlebars-template">
+      <div class="container h-100">
+        <div class="row justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-8">
+            <div class="card mt-5">
+              <div class="card-header bg-primary text-white">
+                <h2 class="mb-0">{{feedbackTitle}}</h2>
+              </div>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p class="card-text text-center">{{feedbackMessage}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </script>
 
-     
-  <script id="result-template" type="text/x-handlebars-template">
-    <div class="p-3">
+    <script id="result-template" type="text/x-handlebars-template">
+      <div
+        class="p-3 d-flex flex-column justify-content-center align-items-center vh-100"
+      >
         <h2 class="mb-3">Quiz Results</h2>
         <p class="mb-3">Thank you for taking the quiz, {{name}}!</p>
-        <p class="mb-3">Your score: {{score}} out of {{total}}</p>
-        <button id="restartQuiz" class="btn btn-primary">Take Again</button>
-    </div>
-</script> 
+        <p class="mb-3">Your score:
+          {{score}}
+          out of
+          {{total}}
+          ({{percentage}}%)</p>
+        <p class="mb-3">{{resultMessage}}</p>
+        <div>
+          <button id="restartQuiz" class="btn btn-primary mr-2">Take Again</button>
+          <button id="goHome" class="btn btn-primary">Go back to home page</button>
+        </div>
+      </div>
+    </script>
   </body>
 </html>
